# codesign-verifier-app

./: .gitignore  CMakeLists.txt  README.md  build  build.sh
src/: CMakeLists.txt
src/Views/: ContentView.swift  MainView.swift
